<resources>
    <string name="app_name">dakirni</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_text">Add Text</string>
    <string name="add_image">Add Image</string>
    <string name="add_voice">Add Voice</string>
    <string name="confirm">Confirm</string>
    <string name="no_image">No image had been selected</string>
    <string name="image_uploaded">Image successfully uploaded</string>

    <string name="no_voice">No voice had been added</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_text">Reminder Text</string>
    <string name="repeat_reminder">Repeat Reminder</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="reminder">Reminder</string>
    <string name="cancel">Cancel</string>
    <string name="reminder_days">Reminder days</string>
    <string name="base_longitude">Base Longitude</string>
    <string name="base_latitude">Base latitude</string>
    <string name="get_location">Get Location</string>
    <string name="automatic_detection">Automatic Detection</string>
    <string name="no_longitude">No longitude has been set</string>
    <string name="no_latitude">No latitude has been set</string>
    <string name="manual_detection">Manual Detection</string>
    <string name="insert_location">Insert Location</string>
    <string name="save">Save</string>
    <string name="location_radius">Location Radius</string>
    <string name="enter_radius">please enter a location radius</string>
    <string name="set">set</string>
    <string name="title_activity_safe_zone">SafeZoneActivity</string>
    <string name="add_contact">Add Contact</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="title_activity_parent_xdash_board">Parent_x_DashBoard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_parents_dash_board">ParentsDashBoard</string>
    <string name="title_activity_contact_dash_board">ContactssDashBoard</string>

    <string name="menu_messages">Messages</string>
    <string name="menu_reminders">Reminders</string>
    <string name="menu_safezone">Safe Zone</string>
    <string name="menu_qrcode">QR Code</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_homeboard">Dash Board</string>
    <string name="nom">Name</string>
    <string name="age">Age</string>
    <string name="plus">+</string>
    <string name="relation">Relation</string>

    <!--QR CODE -->
    <string name="codeQR">QR code</string>
    <string name="entre_key_for_QR">Enter your info</string>
    <string name="generate_code">Generate QR Code</string>
    <string name="imprimer_code">Imprimer QR Code</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="subject">Subject</string>
    <string name="uploadImage">Upload Image</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="text">Text</string>
    <string name="message">type your message here</string>
    <string name="key">Key</string>
    <string name="login">Login</string>
    <string name="goRegister">Reister now !</string>
    <string name="name">Name</string>
    <string name="newPassword">New Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="forgotPassword">Forgot Password ?</string>
    <string name="generate">Generate</string>
    <string name="emailVerification">Email Verification</string>
    <string name="send">send</string>
    <string name="msg_title">Title</string>
    <string name="msg_title_content">Enter the message title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- this is for Remainders -->
    <string name="toggle_flash">Toggle Flash</string>
    <string name="scanned_data">Scanned Data</string>
    <string name="audio_recorder">Audio Recorder</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="play_recording">Play Recording</string>
    <string name="stop_playing">Stop Playing</string>
    <string name="status">Status</string>
    <string name="update">update</string>
</resources>