<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.qrcode.QrCodeFragment">
    <ImageView
        android:id="@+id/idQR"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100sp"
        android:contentDescription="@string/codeQR" />





    <Button
        android:id="@+id/buttonqr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idQR"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/generate_code" />
    <Button
        android:id="@+id/ImprimerQR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonqr"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/imprimer_code" />

    <RadioGroup
        android:id="@+id/Group"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:orientation="horizontal"

        >

        <RadioButton
            android:id="@+id/AUTHENTIFICATION"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:text="AUTHENTIFICATION" />

        <RadioButton
            android:id="@+id/generateQR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="generateQR" />
    </RadioGroup>


</RelativeLayout>