<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="180dp">

        <RadioGroup
            android:id="@+id/radioGroup_base_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButton_automatic_detection"
                style="@style/CustomCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/automatic_detection"
                android:textColorHighlight="@color/blue"
                android:textColorLink="@color/blue" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="16dp">

                <Button
                    android:id="@+id/btn_get_location"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="16dp"
                    android:text="@string/get_location" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/linearLayout_get_longitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:background="@drawable/blue_border_rounded_cornwe">

                        <TextView
                            android:id="@+id/tv_get_longitude"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/poppins_regular"
                            android:maxLines="1"
                            android:paddingLeft="17dp"
                            android:paddingTop="15dp"
                            android:paddingBottom="15dp"
                            android:text="@string/no_longitude"
                            android:textCursorDrawable="@drawable/cursor_color" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/linearLayout_get_latitude"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/blue_border_rounded_cornwe">

                        <TextView
                            android:id="@+id/tv_get_latitude"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/poppins_regular"
                            android:maxLines="1"
                            android:paddingLeft="17dp"
                            android:paddingTop="15dp"
                            android:paddingBottom="15dp"
                            android:text="@string/no_latitude"
                            android:textCursorDrawable="@drawable/cursor_color" />

                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <RadioButton
                android:id="@+id/radioButton_manual_detection"
                style="@style/CustomCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manual_detection" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="16dp">

                <Button
                    android:id="@+id/btn_insert_location"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="16dp"
                    android:enabled="false"
                    android:text="@string/insert_location" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/linearLayout_insert_longitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:background="@drawable/blue_border_rounded_cornwe">

                        <TextView
                            android:id="@+id/tv_insert_longitude"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:enabled="false"
                            android:fontFamily="@font/poppins_regular"
                            android:maxLines="1"
                            android:paddingLeft="17dp"
                            android:paddingTop="15dp"
                            android:paddingBottom="15dp"
                            android:text="@string/no_longitude"
                            android:textCursorDrawable="@drawable/cursor_color" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/linearLayout_insert_latitude"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/blue_border_rounded_cornwe">

                        <TextView
                            android:id="@+id/tv_insert_latitude"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:enabled="false"
                            android:fontFamily="@font/poppins_regular"
                            android:maxLines="1"
                            android:paddingLeft="17dp"
                            android:paddingTop="15dp"
                            android:paddingBottom="15dp"
                            android:text="@string/no_latitude"
                            android:textCursorDrawable="@drawable/cursor_color" />

                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

        </RadioGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="27dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:text="@string/location_radius"
            android:textColor="@color/black" />

        <RelativeLayout
            android:id="@+id/linearLayout_set_location_radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/blue_border_rounded_cornwe">

            <EditText
                android:id="@+id/editText_set_location_radius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/enter_radius"
                android:inputType="number"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="12sp" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>